tests/testthat/test-parallel/ok/tests/testthat/test-ok-2.R
test_that("this fails", {
  expect_equal(Sys.getpid(), 0L)
})
