tests/testthat/test-parallel/syntax-error/tests/testthat/test-error-1.R
test_that("this is good", {
  expect_equal(2 * 2, 4)
})

but this is a syntax error!
